# deadlock-api-ingest

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  default.nix  docker-compose.yml  flake.nix  install-linux.sh  install-windows.ps1  install.bat  module.nix  tauri.conf.json  uninstall-linux.sh  uninstall-windows.ps1  update-checker.ps1  update-checker.sh
.github/: FUNDING.yml
.github/workflows/: main.yml
capabilities/: desktop.json
icons/: icon.icns
setup/: install-windows.ps1
src/: error.rs  http_listener.rs  http_listener_linux.rs  http_listener_win.rs  ingestion_cache.rs  lib.rs  main.rs  scan_cache.rs  statlocker.rs  steam_user.rs  utils.rs
src/http/: mod.rs  parser.rs
src/packet/: mod.rs  tcp_stream_id.rs
src/stream/: buffer.rs  mod.rs
tests/: nix-install.sh  resource_usage.rs
