[package]
name = "deadlock-api-ingest"
version = "0.1.0"
description = "Deadlock API Ingest"
repository = "https://github.com/deadlock-api/deadlock-api-ingest"
license = "MIT"
edition = "2024"

[dependencies]
ureq = { version = "3.1.2", default-features = false, features = ["json", "rustls"] }
memchr = "2.7.6"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"

[dev-dependencies]
sysinfo = "0.37.2"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
