[package]
name = "deadlock-api-ingest"
version = "0.2.3"
description = "Deadlock API Ingest"
repository = "https://github.com/deadlock-api/deadlock-api-ingest"
license = "MIT"
edition = "2024"

[dependencies]
ureq = { version = "3.2.0", default-features = false, features = ["json", "rustls"] }
memchr = "2.8.0"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
steamlocate = "2.0.1"
dirs = "6.0.0"
walkdir = "2.5.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
sysinfo = "0.38.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
